# LeMonADE_Interaction

./: AUTHORS.md  CMakeLists.txt  README.md  configure
executables/: CMakeLists.txt  generate_blockcopolymers.cpp  simulate_interaction.cpp  simulate_interactionGPU.cpp
include/LeMonADE_Interaction/core/: WrapperUpdaterGPU_Interaction.h
include/LeMonADE_Interaction/updater/: UpdaterAbstractCreate.h  UpdaterAddInteractionTagLC.h  UpdaterAddLinearChains.h  UpdaterGPU_Interaction.h
projects/utility/: CMakeLists.txt
src/: CMakeLists.txt
src/LeMonADE_Interaction/: CMakeLists.txt
src/LeMonADE_Interaction/updater/: CMakeLists.txt  UpdaterGPU_Interaction.cu
src/LeMonADE_Interaction/utility/: CMakeLists.txt  CommandlineParser.cpp
tests/: test_main.cpp
